# New_DCCPP

./: .clang-format  CMakeLists.txt  Changelog.md  Changelog_FR.md  DCCpp.cpp  DCCpp.h  DCCpp_commands.cpp  DCCpp_commands.h  DCCpp_emul.cpp  DCCpp_emul.h  DCCpp_utils.cpp  DCCpp_utils.h  DDGI_DCCpp.cpp  DDGI_Generic_def.h  DDGI_Generic_lib_def.h  LICENSE  README.md
Doc/: Timer.md
dialogs/: DCCpp_dlg.cpp  DCCpp_dlg.h  DCCpp_dlg_definitions.h  rsrc.rc
doc/: Timer.md
websockets/: wsclient.cpp  wsclient.h
